fixed visual spacing

--- a/style.css
+++ b/style.css
@@ -298,10 +298,10 @@ button:focus {
 /*=== Featured section ===*/
 
 .mu-header-featured-area {
-	display: inline;
+	display: flex;
 	float: left;
-	padding: 150px 0;
 	width: 100%;
+	align-items: center;
 }
 
 .mu-header-featured-img {
@@ -313,7 +313,6 @@ button:focus {
 .mu-header-featured-content {
 	display: inline;
 	float: right;
-	margin-top: 200px;
 	text-align: center;
 }
 
@@ -661,7 +660,7 @@ button:focus {
 .mu-video-area {
 	display: inline;
 	float: left;
-	padding: 200px 0;
+	padding: 100px 0;
 	text-align: center;
 	width: 100%;
 }
@@ -768,7 +767,7 @@ button:focus {
 	width: 100%;
 	height: 0; 
 	padding-bottom: 51%;
-	margin: 100px 0px;	  
+	margin: 20px 0;	  
 }
 
 .mu-aspect-ratio iframe {
@@ -912,7 +911,7 @@ button:focus {
 .mu-download-area {
 	display: inline;
 	float: left;
-	padding: 150px 0;
+	padding: 50px 0;
 	width: 100%;
 }
 
@@ -1212,10 +1211,6 @@ button:focus {
 
 @media (max-width: 1199px) {
 
-	.mu-header-featured-content {
-		margin-top: 120px;
-	}
-
 	.mu-video-iframe-area {
 		padding: 16% 0;
 	}
@@ -1248,8 +1243,21 @@ button:focus {
 		padding: 12px 22px;
 	}
 
+	.mu-header-featured-area {
+		display: inline;
+		margin-top: 150px;
+	}
+
+	.mu-header-featured-area p {
+		font-size: 80%;
+	}
+
 	.mu-header-featured-content {
-		margin-top: 35px;
+		margin-top: 20px;
+	}
+
+	.mu-header-featured-img {
+		height: auto;
 	}
 
 	.mu-video-iframe-area {
